# sati

./: .gitignore  .size-limit.json  Anchor.toml  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.options.json  vitest.config.ts
apps/dashboard/: .env.example  .gitignore  components.json  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.worker.json  vite.config.ts  worker-configuration.d.ts  wrangler.json
apps/dashboard/src/react-app/: main.tsx  router.tsx
apps/dashboard/src/react-app/components/: AgentAvatar.tsx  AgentCard.tsx  AgentTable.tsx  EditMetadataDialog.tsx  FeedbackDetailModal.tsx  GiveFeedbackDialog.tsx  Header.tsx  NetworkSelector.tsx  RegisterAgentDialog.tsx
apps/dashboard/src/react-app/components/ui/: slider.tsx  textarea.tsx
apps/dashboard/src/react-app/components/wallet/: wallet-button.tsx
apps/dashboard/src/react-app/hooks/: use-copy-to-clipboard.ts  use-sati.ts
apps/dashboard/src/react-app/layouts/: RootLayout.tsx
apps/dashboard/src/react-app/lib/: constants.ts  network.ts  sati.ts  upload.ts  x402.ts  zod-resolver.ts
apps/dashboard/src/react-app/pages/: AgentDetails.tsx  Dashboard.tsx  Explore.tsx  SigningTest.tsx  index.ts
apps/dashboard/src/worker/: index.ts
docs/: appendix-a-caip-did.md  appendix-a-implementation.md  appendix-b-implementation.md  specification.md  tests-to-be-added-plan.md  transaction_size.md
docs/benchmarks/: README.md  compute_units.md
examples/: give-feedback.ts  register-agent.ts  request-validation.ts  smart-account-agent.ts
programs/sati/: Cargo.toml
programs/sati-registry/: Cargo.toml
programs/sati-registry/benches/: compute_units.rs
programs/sati-registry/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/sati-registry/src/instructions/: initialize.rs  mod.rs  register_agent.rs  update_authority.rs
programs/sati-registry/tests/: test_initialize.rs  test_register_agent.rs  test_register_agent_integration.rs  test_security.rs  test_state_verification.rs  test_update_authority.rs
programs/sati-registry/tests/helpers/: accounts.rs  errors.rs  instructions.rs  mod.rs  serialization.rs
programs/sati/src/: constants.rs  errors.rs  events.rs  lib.rs  signature.rs  state.rs
programs/sati/src/instructions/: mod.rs
programs/sati/src/instructions/attestation/: close_attestation.rs  close_compressed_attestation.rs  close_regular_attestation.rs  create_attestation.rs  create_compressed_attestation.rs  create_regular_attestation.rs  mod.rs  register_schema_config.rs
programs/sati/src/instructions/registry/: initialize.rs  link_evm_address.rs  mod.rs  register_agent.rs  update_authority.rs
programs/sati/tests/: main.rs  siws_conformance.rs
programs/sati/tests/attestation/: close_compressed.rs  close_compressed_attestation.rs  create_compressed.rs  create_compressed_attestation.rs  mod.rs
programs/sati/tests/common/: accounts.rs  ed25519.rs  instructions.rs  mod.rs  setup.rs
programs/sati/tests/fixtures/: siws-vectors.json
programs/sati/tests/registry/: initialize.rs  link_evm_address.rs  mod.rs  register_agent.rs  register_schema_config.rs  update_authority.rs
scripts/: demo.js
sdk/: idl.json  package.json
sdk/scripts/: deploy-and-initialize.ts  generate-clients.ts  initialize-registry.ts
sdk/src/: client.ts  ed25519.ts  hashes.ts  helpers.ts  index.ts  light.ts  sas.ts  schemas.ts  types.ts
sdk/src/deployed/: devnet-test.json  devnet.json
sdk/tests/: client.test.ts  sas-smoke.test.ts
sdk/tests/e2e/: attestation-flow.test.ts  feedback-flow.test.ts
sdk/tests/helpers/: accounts.ts  index.ts  instructions.ts  lookup-table.ts  signatures.ts  test-rpc.ts
sdk/tests/integration/: light.test.ts  registry.test.ts
sdk/tests/unit/: deployed-config.test.ts  hashes.test.ts  schemas.test.ts  signatures.test.ts
tests/: sati-registry.test.ts  smoke.test.ts
tests/smoke/: light-protocol.smoke.ts  registry.smoke.ts
