[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
solana-security-txt = "1.1.1"
solana-sdk = "2.3"
solana-program = "2.3"

# Light Protocol for compressed accounts
light-sdk = { version = "0.17", features = ["anchor"] }
light-hasher = "5.0"

# Solana Attestation Service
solana-attestation-service-client = "1.0"

# Crypto
sha3 = "0.10"
